# eigen-matio

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  MATIo  MATio  MexEig  README.md  mextest.cpp  test.m
cmake/: External_GTest.cmake
include/MATio/: MATio.hpp
test/: build.sh  read_test.cpp
tests/: CMakeLists.txt  data.mat  matdump.cpp  mexeig_test.m  mextest.cpp  read_test.cpp  test.m  test.mat  test_read.cpp
